--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><i><u>Saylani</u></i></h1>
-    <p>H<sub>2</sub>O . <br>its a formula of water . </p>
+    <h1><i><u>Saylani</u></i></h1> <hr>
+    <p>H<sub>2</sub>O . <br> <br> its a formula of water . </p>
     <p>in exam im 1 <sup>st</sup>in the class . </p>
 </body>
 </html>
